# ChartExtractor

./: .buildinfo  .gitignore  CITATION.cff  MANIFEST.in  README.md  annotations.html  config.yaml  dockerfile  genindex.html  index.html  lambda_function.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  tiling.html
.github/workflows/: sphinx.yml
ChartExtractor/extraction/: blood_pressure_and_heart_rate.py  checkboxes.py  drug_doses_and_fluids.py  extraction.py  extraction_utilities.py  inhaled_volatile.py  intraoperative_digit_boxes.py  physiological_indicators.py  preoperative_postoperative_digit_boxes.py
ChartExtractor/image_registration/: homography.py
ChartExtractor/label_clustering/: clustering_methods.py
ChartExtractor/object_detection_models/: object_detection_model.py  onnx_yolov11_detection.py  onnx_yolov11_pose_single.py  ultralytics_yolov11_pose.py  ultralytics_yolov8.py
ChartExtractor/point_registration/: homography.py
ChartExtractor/utilities/: annotations.py  detection_reassembly.py  detections.py  read_config.py  tiling.py
_sources/: annotations.rst.txt  index.rst.txt  tiling.rst.txt
data/centroids/: intraop_centroids.json  intraop_digit_box_centroids.json  preop_postop_centroids.json  preop_postop_digit_box_centroids.json
docs/: requirements.txt
docs/source/: annotations.rst  conf.py  detection_reassembly.rst  detections.rst  detections_reassembly.rst  homography.rst  image_conversion.rst  image_registration.rst  image_tiling.rst  index.rst  kc_image_registration.rst  kc_image_tiling.rst  key_concepts.rst  modules.rst  object_detection_model.rst  object_detection_models.rst  tiling.rst  ultralytics_yolov8.rst  utilities.rst
src/: annotations.py  detection_reassembly.py  detections.py  tiling.py
src/extraction/: blood_pressure_and_heart_rate.py  checkboxes.py  drug_codes.py  drug_doses_and_fluids.py  extraction.py  extraction_utilities.py  handwritten_digit_utils.py  inhaled_volatile.py  intraoperative_digit_boxes.py  physiological_indicators.py  preoperative_postoperative_digit_boxes.py
src/image_registration/: homography.py  thin_plate_splining.py
src/label_clustering/: cluster.py  clustering_methods.py  isolate_labels.py
src/object_detection_models/: object_detection_model.py  ultralytics_yolov11_pose.py  ultralytics_yolov8.py  yolov8.py
src/utilities/: annotations.py  detection_reassembly.py  detections.py  image_conversion.py  tiling.py
tests/unit_tests/: test_annotations.py  test_clustering.py  test_detection_reassembly.py  test_detections.py  test_homography.py  test_image_conversion.py  test_tiling.py  (+1 more)
(+25 files in other folders)
