[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ChartExtractor"
version = "1.0.0a"
dependencies = [
    "numpy",
    "onnxruntime",
    "opencv-python-headless",
    "pillow",
    "scikit-learn",
    "scipy"
]
authors = [
    {name = "Ryan Folks", email = "vcz2aj@uvahealth.org"},
    {name = "Charbel Marche", email = "qdy4zt@virginia.edu"},
    {name = "Hannah Valenty", email = "unc6kr@virginia.edu"},
    {name = "Matthew Beck", email = "mtb2tgk@virginia.edu"}
]
maintainers = [
    {name = "Ryan Folks", email = "vcz2aj@uvahealth.org"},
    {name = "Charbel Marche", email = "qdy4zt@virginia.edu"}
]
description = "A library for digitizing smartphone images of paper surgical records."
readme = "README.md"
license = "GPL-3.0"
license-files = ["LICENSE"]
keywords = ["computer vision"]
classifiers = ["Development Status :: 3 - Alpha"]

[tool.setuptools.packages.find]
where = ["src"]
